// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository should call login API for OTP and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should call login API for email and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should call otp API for fetch 1`] = `
Object {
  "otp_sent": true,
}
`;

exports[`UserRepository should call otp API for verify 1`] = `
Object {
  "otp_verify": true,
}
`;

exports[`UserRepository should call socialLogin and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should check if email exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should check if phone exists 1`] = `
Object {
  "is_exists": true,
}
`;
